add difference between primary\secondary scools, remade charts and some text blocks

--- a/assets/styles/pages/achievement.css
+++ b/assets/styles/pages/achievement.css
@@ -27,8 +27,9 @@
 	color: #ed4d8b;
 	margin-bottom: 20px;
 }
+
 .about__chart p {
-	text-decoration: underline;
+	/* text-decoration: underline; */
 	margin-bottom: 20px;
 }
 
@@ -38,4 +39,5 @@
 	object-fit: contain;
 	object-position: center;
 	display: block;
+	margin-bottom: 15px;
 }
