--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -292,6 +292,11 @@ input:checked + .toggle-switch__slider:before {
 	gap: 10px;
 }
 
+.page-navigation.with-gap {
+	justify-content: flex-start;
+	gap: 20px;
+}
+
 .page-navigation__button {
 	display: flex;
 	flex-direction: column;
@@ -358,4 +363,19 @@ input:checked + .toggle-switch__slider:before {
 }
 .leaflet-popup-content p {
 	margin: 0;
+}
+
+/* links */
+.link-color {
+	color: #ed4d8b;
+}
+
+/* blocks */
+
+.about-sector {
+	margin-bottom: 30px;
+}
+
+.about-sector p {
+	margin-bottom: 10px;
 }
