--- a/assets/styles/pages/school.css
+++ b/assets/styles/pages/school.css
@@ -283,6 +283,7 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	/* object-fit: contain; */
 	background-position: center;
 }
 
@@ -390,4 +391,120 @@
 .verification p {
 	font-size: 12px;
 	font-weight: 700;
+}
+
+/* popup */
+
+.popup-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100vw;
+	overflow-y: auto;
+	z-index: 55;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 10px 10px;
+}
+.popup-wrapper::-webkit-scrollbar {
+	display: none;
+}
+
+.popup-wrapper.hidden {
+	transition: top 0.4s ease;
+	background-color: initial;
+	backdrop-filter: blur(0);
+	top: 100vh;
+}
+.popup-wrapper.active {
+	transition: top 0.2s ease;
+	top: 0;
+	background-color: #0000004d;
+	backdrop-filter: blur(2px);
+}
+
+.popup {
+	width: 100%;
+	max-width: 360px;
+	background-color: #fff;
+	padding: 20px 20px 40px 20px;
+	border-radius: 20px;
+}
+
+.popup .popup__close-btn {
+	display: block;
+	margin-left: auto;
+	cursor: pointer;
+	width: 24px;
+	height: 24px;
+	margin-bottom: 10px;
+}
+.share-popup .popup__title {
+	font-size: 28px;
+	font-weight: 700;
+	margin-bottom: 10px;
+	color: #181d27;
+	line-height: 110%;
+}
+
+.share-popup .popup__description {
+	font-size: 14px;
+	font-weight: 400;
+	margin-bottom: 20px;
+}
+
+.share-popup .share-block {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 22px;
+}
+
+.share-popup .share-block label {
+	margin-left: auto;
+	margin-bottom: 7px;
+	font-size: 12px;
+	font-weight: 400;
+	color: #e50059;
+	cursor: pointer;
+}
+
+.share-popup .share-block input {
+	padding: 13px 36px 13px 12px;
+	border: #d5d7da 1px solid;
+	border-radius: 10px;
+	box-shadow: 0px 1px 2px 0px #00000040;
+	width: 100%;
+	font-size: 14px;
+}
+
+.share-popup .share-block .share-link-wrapper {
+	position: relative;
+	width: 100%;
+}
+
+.share-popup .share-block button {
+	position: absolute;
+	top: 50%;
+	right: 12px;
+	transform: translateY(-50%);
+	width: 16px;
+	height: 16px;
+	cursor: pointer;
+}
+
+.popup__qrcode {
+	width: 180px;
+	height: 180px;
+	padding: 10px;
+	margin: 0 auto;
+	box-shadow: 0px 0px 6px 0px #00000040;
+	border-radius: 10px;
+}
+.popup__qrcode img {
+	width: 100%;
+	height: 100%;
 }
