--- a/styles/pages/school.css
+++ b/styles/pages/school.css
@@ -409,3 +409,71 @@
 	font-size: 12px;
 	font-weight: 700;
 }
+
+/* popup */
+
+.share-popup .popup__title {
+	font-size: 28px;
+	font-weight: 700;
+	margin-bottom: 10px;
+	color: #181d27;
+	line-height: 110%;
+}
+
+.share-popup .popup__description {
+	font-size: 14px;
+	font-weight: 400;
+	margin-bottom: 20px;
+}
+
+.share-popup .share-block {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 22px;
+}
+
+.share-popup .share-block label {
+	margin-left: auto;
+	margin-bottom: 7px;
+	font-size: 12px;
+	font-weight: 400;
+	color: #e50059;
+	cursor: pointer;
+}
+
+.share-popup .share-block input {
+	padding: 13px 36px 13px 12px;
+	border: #d5d7da 1px solid;
+	border-radius: 10px;
+	box-shadow: 0px 1px 2px 0px #00000040;
+	width: 100%;
+	font-size: 14px;
+}
+
+.share-popup .share-block .share-link-wrapper {
+	position: relative;
+	width: 100%;
+}
+
+.share-popup .share-block button {
+	position: absolute;
+	top: 50%;
+	right: 12px;
+	transform: translateY(-50%);
+	width: 16px;
+	height: 16px;
+	cursor: pointer;
+}
+
+.popup__qrcode {
+	width: 180px;
+	height: 180px;
+	padding: 10px;
+	margin: 0 auto;
+	box-shadow: 0px 0px 6px 0px #00000040;
+	border-radius: 10px;
+}
+.popup__qrcode img {
+	width: 100%;
+	height: 100%;
+}
