--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -11,6 +11,9 @@
 	--secondContainer: 1170px;
 	--textBlue: #1d92ff;
 }
+[v-cloak] {
+	display: none;
+}
 
 [class*="__container"] {
 	max-width: var(--container);
@@ -289,6 +292,11 @@ input:checked + .toggle-switch__slider:before {
 	gap: 10px;
 }
 
+.page-navigation.with-gap {
+	justify-content: flex-start;
+	gap: 20px;
+}
+
 .page-navigation__button {
 	display: flex;
 	flex-direction: column;
@@ -355,4 +363,102 @@ input:checked + .toggle-switch__slider:before {
 }
 .leaflet-popup-content p {
 	margin: 0;
+}
+
+/* links */
+.link-color {
+	color: #ed4d8b;
+}
+
+/* blocks */
+
+.about a {
+	text-decoration: underline;
+	color: #ed4d8b;
+	cursor: pointer;
+	font-weight: 400;
+}
+
+.about-sector {
+	margin-bottom: 30px;
+}
+
+.about-sector p {
+	margin-bottom: 10px;
+}
+
+.headlines a {
+	color: #ffffff;
+}
+
+/* popup wrapper  */
+
+.popup-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	overflow-y: auto;
+	z-index: 55;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+	padding: 10px;
+	display: flex;
+	justify-content: center;
+}
+
+.popup-wrapper::-webkit-scrollbar {
+	display: none;
+}
+
+.popup-wrapper.hidden {
+	transition: top 0.4s ease;
+	background-color: initial;
+	backdrop-filter: blur(0);
+	top: 100vh;
+}
+
+.popup-wrapper.active {
+	transition: top 0.2s ease;
+	top: 0;
+	background-color: #0000004d;
+	backdrop-filter: blur(2px);
+}
+
+.popup {
+	position: relative;
+	width: 100%;
+	max-width: 360px;
+	background-color: #fff;
+	padding: 20px 20px 40px 20px;
+	border-radius: 20px;
+	margin: auto;
+}
+
+.popup .popup__close-btn {
+	display: block;
+	margin-left: auto;
+	cursor: pointer;
+	width: 24px;
+	height: 24px;
+	margin-bottom: 10px;
+}
+
+.popup .popup__body h2 {
+	font-size: 28px;
+	font-weight: 700;
+	color: #181d27;
+	line-height: 110%;
+	margin-bottom: 10px;
+}
+
+.popup .popup__body p {
+	font-size: 14px;
+	font-weight: 400;
+	margin-bottom: 8px;
+}
+
+.popup .popup__body a {
+	color: #ed4d8b;
 }
