--- a/assets/styles/pages/achievement.css
+++ b/assets/styles/pages/achievement.css
@@ -12,11 +12,11 @@
 	margin-bottom: 10px;
 	display: inline-block;
 }
-.about-sector .about__link {
+/* .about-sector .about__link {
 	color: #ed4d8b;
 	text-decoration: underline;
 	display: inline-block;
-}
+} */
 .about__chart:not(:last-child) {
 	margin-bottom: 20px;
 }
@@ -27,8 +27,9 @@
 	color: #ed4d8b;
 	margin-bottom: 20px;
 }
+
 .about__chart p {
-	text-decoration: underline;
+	/* text-decoration: underline; */
 	margin-bottom: 20px;
 }
 
@@ -38,4 +39,5 @@
 	object-fit: contain;
 	object-position: center;
 	display: block;
+	margin-bottom: 15px;
 }
