--- a/assets/styles/pages/main.css
+++ b/assets/styles/pages/main.css
@@ -63,12 +63,12 @@
 	margin-bottom: 10px;
 	font-size: 14px;
 }
-.tab__text.link {
+/* .tab__text.link {
 	text-decoration: underline;
 	color: #ed4d8b;
 	cursor: pointer;
 	font-weight: 400;
-}
+} */
 .tab__text.link img {
 	width: 12.5px;
 	height: 12.5px;
@@ -103,6 +103,7 @@
 	font-size: 15px;
 	font-weight: 400;
 	color: #000000;
+	min-height: 50px;
 }
 .schools-info .schools-filter .schools-filter__input input {
 	width: 100%;
@@ -434,4 +435,13 @@
 
 .filter-overlay__button.button-with-bg {
 	padding: 15px 15px;
+}
+
+.intro-list {
+	padding: 10px 30px;
+
+}
+
+.intro-list li {
+    list-style-type: disc;
 }
