--- a/assets/styles/pages/school.css
+++ b/assets/styles/pages/school.css
@@ -52,7 +52,25 @@
 	color: #ed6c26;
 }
 
+/* about  */
+/* report tab */
+
+.about__report {
+	margin-bottom: 20px;
+}
+.about__report .tabs-block__item {
+	color: #fff;
+	background-color: #ed4d8b;
+	max-width: 350px;
+}
+.about__report .tabs-block__item .tab__top {
+	padding: 5px 15px;
+	background-color: #ed4d8b;
+	color: #fff;
+}
+
 /* about */
+/* tabs */
 .about__tabs {
 	margin-bottom: 20px;
 }
@@ -87,7 +105,7 @@
 .tab__top .tab__title {
 	flex: 1 1 auto;
 	font-size: 18px;
-	font-weight: 400;
+	font-weight: 700;
 }
 
 .tab__top .tab__close {
@@ -116,6 +134,10 @@
 	visibility: hidden;
 	padding: 0 15px;
 }
+
+.tabs-block__item.active .tab__top p {
+	text-decoration: underline;
+}
 .tabs-block__item.active .tab__close {
 	transform: rotateZ(-90deg);
 }
@@ -134,7 +156,7 @@
 		padding-bottom: 0;
 	}
 	100% {
-		max-height: 500px;
+		max-height: 600px;
 		opacity: 1;
 		padding-bottom: 20px;
 		visibility: visible;
@@ -183,17 +205,79 @@
 	height: 15px;
 }
 /* sliders in tabs */
+
+.tab-slider {
+}
 .tab-slider:not(:last-child) {
 	margin-bottom: 20px;
 }
 .tab-slider__slide {
-	min-height: 250px;
+	min-height: 300px;
 	max-width: 340px;
 	background-color: #e50059;
 	border-radius: 10px;
 	overflow: hidden;
 	position: relative;
 }
+.tab-slider__slide p {
+	font-size: 14px;
+}
+/* for slides just for text */
+.tab-slider__slide.text-slide {
+	padding: 50px 20px 25px 20px;
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+}
+.tab-slider__slide.text-slide h3 {
+	font-size: 16px;
+	font-weight: 700;
+	margin-bottom: 30px;
+}
+.tab-slider__slide.text-slide p {
+	font-size: 14px;
+	margin-bottom: 7px;
+}
+.tab-slider__slide.text-slide a {
+	font-size: 14px;
+	font-weight: 700;
+	margin-top: auto;
+}
+
+/* for slides with quote and text */
+
+.tab-slider__slide.quote-slide {
+	padding: 50px 20px 25px 20px;
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	height: 100%;
+}
+
+.tab-slider__slide.quote-slide .description-block {
+	display: flex;
+	flex: 1 1 auto;
+}
+.tab-slider__slide.quote-slide .description-block .quote-icon {
+	position: relative;
+	display: inline-block;
+	flex: 0 0 25px;
+	height: 20px;
+	margin-right: 15px;
+}
+
+.tab-slider__slide.quote-slide .description-block p {
+	padding-top: 10px;
+}
+
+/* priorities */
+.tab-slider__slide.priorities-slide {
+	min-height: 200px;
+}
+
+/* general adaptive */
+
 @media (min-width: 430px) {
 	.tab-slider__slide {
 		min-height: 280px;
@@ -212,7 +296,7 @@
 		max-width: 470px;
 	}
 }
-.tab-slider__slide img {
+.tab-slider__slide.img-slide img {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -324,4 +408,72 @@
 .verification p {
 	font-size: 12px;
 	font-weight: 700;
+}
+
+/* popup */
+
+.share-popup .popup__title {
+	font-size: 28px;
+	font-weight: 700;
+	margin-bottom: 10px;
+	color: #181d27;
+	line-height: 110%;
+}
+
+.share-popup .popup__description {
+	font-size: 14px;
+	font-weight: 400;
+	margin-bottom: 20px;
+}
+
+.share-popup .share-block {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 22px;
+}
+
+.share-popup .share-block label {
+	margin-left: auto;
+	margin-bottom: 7px;
+	font-size: 12px;
+	font-weight: 400;
+	color: #e50059;
+	cursor: pointer;
+}
+
+.share-popup .share-block input {
+	padding: 13px 36px 13px 12px;
+	border: #d5d7da 1px solid;
+	border-radius: 10px;
+	box-shadow: 0px 1px 2px 0px #00000040;
+	width: 100%;
+	font-size: 14px;
+}
+
+.share-popup .share-block .share-link-wrapper {
+	position: relative;
+	width: 100%;
+}
+
+.share-popup .share-block button {
+	position: absolute;
+	top: 50%;
+	right: 12px;
+	transform: translateY(-50%);
+	width: 16px;
+	height: 16px;
+	cursor: pointer;
+}
+
+.popup__qrcode {
+	width: 180px;
+	height: 180px;
+	padding: 10px;
+	margin: 0 auto;
+	box-shadow: 0px 0px 6px 0px #00000040;
+	border-radius: 10px;
+}
+.popup__qrcode img {
+	width: 100%;
+	height: 100%;
 }
